--- a/cocomoII.html
+++ b/cocomoII.html
@@ -12,9 +12,8 @@
 				if(Size){
 					$("#butt").css("display", "none");
 				$("#butt").css( "transition", ".1s");
-					$("#butt").fadeIn(1000);
+					$("#butt").fadeIn(500);
 				}
-				//$("#butt").css("visibility", "visible");
 				$(".down h3").css("display", "none");
 				$(".down h3").css( "transition", ".1s");
 				$(".down h3").fadeIn(1000);
@@ -22,7 +21,7 @@
 		});
 	</script>
 		<div class="content">
-		<h1>COCOMO</h1>
+		<h1>COCOMO II</h1>
 		<div class="left">
 		<h3>Модель</h3>
 		<div class="select">
@@ -81,7 +80,7 @@
 								<td>2. Розмір БД проекта</td>
 								<td><div class="list"/><label><input type="radio" name="n/a" value="1.40"/><b></b></label></td>
 								<td><div class="list"/><label><input type="radio" name="t2" value="0.94"/><i></i></label></td>
-								<td><div class="list"/><label><input type="radio" name="t2" value="1.00" checked/><i></i></label></td>
+								<td><div class="list"/><label><input type="radio" name="t2" value="1" checked/><i></i></label></td>
 								<td><div class="list"/><label><input type="radio" name="t2" value="1.08"/><i></i></label></td>
 								<td><div class="list"/><label><input type="radio" name="t2" value="1.16"/><i></i></label></td>
 								<td><div class="list"/><label><input type="radio" name="n/a" value="1.40"/><b></b></label></td>
